--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -15,23 +15,18 @@
     </ul>
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('secure_page') }}">Your Page</a>
+        <a class="nav-link" href="{{ url_for('profile') }}">Profile</a>
       </li>
     </ul>
-
+     <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('profiles') }}">Profiles</a>
+      </li>
+    </ul>
     <ul class="navbar-nav">
       <li class="nav-item">
-        {% if current_user.is_authenticated %}
-          <li class="nav-item active">
-            <a class="nav-link" href="{{ url_for('logout') }}">{{current_user.first_name}} {{current_user.last_name}} </br> Logout  </a>
-          </li>
-      {% else %}
-          <li class="nav-item active">
-            <a class="nav-link" href="{{ url_for('login') }}">Login</a>
-          </li>
-      {% endif %}   
+        <a class="nav-link" href="{{ url_for('signUp') }}">Sign Up</a>
       </li>
-    </ul>      
-    
+    </ul>
   </div>
 </nav>
